init novacare project

--- a/src/pug/templates/block/footer.pug
+++ b/src/pug/templates/block/footer.pug
@@ -1,3 +1,15 @@
-footer.footer-wrap
-    .container
-        h1 Footer
+header.footer-wrap 
+  .container
+    .footer
+      .footer_logo
+        img.footer_logo-image(src='@img/logo.png')
+      .footer_content
+        nav.footer_nav
+          a.footer_item Home
+          a.footer_item About Us
+          a.footer_item Catalog
+          a.footer_item Why Us
+          a.footer_item Contacts
+        .footer_radio-box
+          a.footer_radio-item.footer_radio-item--active ENG
+          a.footer_radio-item RU
