--- a/src/scss/options/_variables.scss
+++ b/src/scss/options/_variables.scss
@@ -3,22 +3,22 @@
   --mq-size-md: 716px;
   --mq-size-lg: 960px;
   --mq-size-xl: 1170px;
-  --mq-size-xl: 1170px;
   --mq-size-xxl: 1320px;
 
-  --theme-color-base: #80addc;
-  --theme-color-secondary: #40576e;
   --theme-color-white: #fff;
   --theme-color-black: #000;
-  --theme-bg-base: #c7c6c6;
-  --theme-bg-secondary: #F9F4F2;
+  --theme-color-base: #F6F9FF;
+  --theme-color-secondary: #7BC3FF;
+  // --theme-bg-base: #c7c6c6;
+  // --theme-bg-secondary: #F9F4F2;
   // --theme-bg-modal: #DBDBDB;
   // --theme-color-error: #BC3850;
 
-  --text-color-base: #272727;
-  // --text-color-secondary: #fff;
-  // --text-color-three: #211381;
+  --text-color-base: #3C5185;
+  --text-color-secondary: #1D3673;
+  --text-color-three: #59A4FC;
   
-  // --btn-color-base: #FED305;
+  --btn-color-base: #57A3FC;
+  --btn-color-secondary: #7BC3FF;
   // --link-color-base: #3314ff;
 }
