--- a/src/pug/templates/index.pug
+++ b/src/pug/templates/index.pug
@@ -4,11 +4,17 @@ block title
   title=  "Home"
     
 block header 
+  - const linkLogo = true
+  - const lang = 'eng'
   include block/header
 
 block main
   main.page 
-    include home/main-block
-        
+    include home/preview-block
+    include home/about-us-block 
+    include home/catalog-block
+    include home/why-us-block
+    include home/contact-block
+
 block footer 
   include block/footer
