--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,16 +1,24 @@
-@font-face {	font-family: 'lato';
+@font-face {	font-family: 'Afacad';
 	font-display: swap;
-	src: url('../fonts/lato-light.woff2') format('woff2'),
-	url('../fonts/lato-light.woff') format('woff'),
-	url('../fonts/lato-light.ttf') format('truetype');
-	font-weight: 300;
+	src: url('../fonts/Afacad-Bold.woff2') format('woff2'),
+	url('../fonts/Afacad-Bold.woff') format('woff'),
+	url('../fonts/Afacad-Bold.ttf') format('truetype');
+	font-weight: 700;
 	font-style: normal;
 }
-@font-face {	font-family: 'Pragmaticashadowc italic';
+@font-face {	font-family: 'OpenSans';
 	font-display: swap;
-	src: url('../fonts/Pragmaticashadowc italic.woff2') format('woff2'),
-	url('../fonts/Pragmaticashadowc italic.woff') format('woff'),
-	url('../fonts/Pragmaticashadowc italic.ttf') format('truetype');
+	src: url('../fonts/OpenSans-Bold.woff2') format('woff2'),
+	url('../fonts/OpenSans-Bold.woff') format('woff'),
+	url('../fonts/OpenSans-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {	font-family: 'OpenSans';
+	font-display: swap;
+	src: url('../fonts/OpenSans-Rerular.woff2') format('woff2'),
+	url('../fonts/OpenSans-Rerular.woff') format('woff'),
+	url('../fonts/OpenSans-Rerular.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
 }
